major changes for authentication

--- a/LeagueScheduler31/app-ngadmin/leagues/leagues.html
+++ b/LeagueScheduler31/app-ngadmin/leagues/leagues.html
@@ -9,7 +9,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr ng-show="vm.canCreateNewLeague">
                 <td>
                     <input type="text" class="form-control" placeholder="New League Name" ng-model="vm.newLeagueName" ui-keypress="{13:'vm.addItem()'}">
                 </td>
@@ -21,35 +21,45 @@
                 </td>
             </tr>
 
-            <tr ng-repeat="league in vm.leagues | orderBy:'name'">
+            <!--<tr ng-repeat="league in vm.leagues | orderBy:'name'">
                 <td ng-hide="vm.currentEdit[league.id]">{{league.name}}</td>
-                <td ng-show="vm.currentEdit[league.id]">
-                    <input type="text" class="form-control" ng-model="vm.itemToEdit.name" />
-                </td>
                 <td>
-                    <div class="btn-group" dropdown ng-hide="vm.currentEdit[league.id]">
-                        <button class="btn btn-success dropdown-toggle" type="button">
-                            Action <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a ui-sref="league.teams({leagueId: league.id})">Configure</a></li>
-                            <li><a ng-click="vm.editItem(league)">Edit</a></li>
-                            <li><a ng-click="vm.deleteItem(league.id)">Delete</a></li>
-                        </ul>
-                    </div>
-
-                    <!--<a class="btn btn-success" ng-href="#/leagues/{{league.id}}/teams" ng-hide="vm.currentEdit[league.id]">Configure</a>-->
-                    <!--<button class="btn btn-info"   ng-hide="vm.currentEdit[league.id]" ng-click="vm.editItem(league)">Edit</button>-->
-                    <!--<button class="btn btn-danger" ng-hide="vm.currentEdit[league.id]" ng-click="vm.deleteItem(league.id)">Delete</button>-->
-
+                    <a class="btn btn-success" ui-sref="league.main({leagueId: league.id})">Configure</a>
                     <button class="btn btn-success" ng-show="vm.currentEdit[league.id]" ng-click="vm.saveItem(league)">Save</button>
                     <button class="btn btn-danger" ng-show="vm.currentEdit[league.id]" ng-click="vm.cancelEdit(league.id)">Cancel</button>
+                </td>
+            </tr>-->
 
+            <tr class="info" ng-show="vm.myLeagues">
+                <td colspan="2"><h4>My Leagues</h4></td>
+            </tr>
+            <tr ng-repeat="league in vm.myLeagues | orderBy:'name'">
+                <td ng-hide="vm.currentEdit[league.id]">{{league.name}}</td>
+                <td>
+                    <a class="btn btn-success" ui-sref="league.main({leagueId: league.id})">Configure</a>
+                    <button class="btn btn-success" ng-show="vm.currentEdit[league.id]" ng-click="vm.saveItem(league)">Save</button>
+                    <button class="btn btn-danger" ng-show="vm.currentEdit[league.id]" ng-click="vm.cancelEdit(league.id)">Cancel</button>
                 </td>
             </tr>
 
-            <tr class="danger" ng-show="vm.archivedLeagues">
-                <td colspan="2">Archived Leagues</td>
+            <tr class="info" ng-show="vm.archivedLeagues">
+                <td colspan="2"><h4>Leagues Shared with Me</h4></td>
+            </tr>
+            <tr ng-repeat="league in vm.otherLeagues | orderBy:'name'">
+                <td ng-hide="vm.currentEdit[league.id]">
+                    {{league.name}}
+                    <!--<small>({{league.permission}})</small>-->
+                </td>
+                <td>
+                    <a class="btn btn-success" ui-sref="league.main({leagueId: league.id})">Configure</a>
+                    <button class="btn btn-success" ng-show="vm.currentEdit[league.id]" ng-click="vm.saveItem(league)">Save</button>
+                    <button class="btn btn-danger" ng-show="vm.currentEdit[league.id]" ng-click="vm.cancelEdit(league.id)">Cancel</button>
+                </td>
+            </tr>
+
+
+            <tr class="info" ng-show="vm.archivedLeagues">
+                <td colspan="2"><h4>Archived Leagues</h4></td>
             </tr>
             <tr ng-repeat="league in vm.archivedLeagues | orderBy:'name'">
                 <td ng-hide="vm.currentEdit[league.id]">{{league.name}}</td>
