--- a/LeagueScheduler31/app-ngadmin/main/main.html
+++ b/LeagueScheduler31/app-ngadmin/main/main.html
@@ -6,7 +6,7 @@
             <input type="text" class="form-control" ng-show="vm.leagueName" ng-model="vm.leagueName" />
         </div>
         <div class="col-md-3">
-            <button class="btn btn-info" ng-hide="vm.leagueName" ng-click="vm.editName()">Edit League Name</button>
+            <button class="btn btn-info" ng-click="vm.editName()" ng-show="vm.canEditLeague">Edit League Name</button>
 
             <button class="btn btn-success" ng-show="vm.leagueName" ng-click="vm.saveEdit()">Save</button>
             <button class="btn btn-danger" ng-show="vm.leagueName" ng-click="vm.cancelEdit()">Cancel</button>
@@ -28,7 +28,7 @@
             <span ng-hide="vm.league.isArchived">League is currently NOT archived.</span>
             <span ng-show="vm.league.isArchived">League is currently archived.</span>
         </div>
-        <div class="col-md-3"> 
+        <div class="col-md-3">
             <button class="btn btn-warning" ng-disabled="true" ng-hide="vm.league.isArchived" ng-click="vm.archive()">Archive</button>
             <button class="btn btn-warning" ng-show="vm.league.isArchived" ng-click="vm.unArchive()">Un-Archive</button>
         </div>
@@ -43,19 +43,19 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" ng-show="vm.canEditLeague">
         <div class="col-md-3">
             <h3>Members</h3>
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" ng-show="vm.canEditLeague">
         <div class="col-md-6">
             <strong>Owner: {{vm.leagueOwner.userName}} ({{vm.leagueOwner.email}})</strong>
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" ng-show="vm.canEditLeague">
         <div class="col-md-6">
             <table class="table table-striped table-condensed table-bordered">
                 <tr>
