--- a/LeagueScheduler31/app-ngadmin/teams/teams.html
+++ b/LeagueScheduler31/app-ngadmin/teams/teams.html
@@ -3,8 +3,8 @@
 
     <div class="row">
         <div class="col-md-4">
-            <button class="btn btn-primary" ng-click="vm.editItem()">Add New Team</button>
-            <button class="btn btn-primary" ng-click="vm.showImport()">Import Teams</button>
+            <button class="btn btn-primary" ng-click="vm.editItem()" ng-show="vm.canEditLeague">Add New Team</button>
+            <button class="btn btn-primary" ng-click="vm.showImport()" ng-show="vm.canEditLeague">Import Teams</button>
         </div>
 
         <div class="col-md-4 col-md-offset-4">
@@ -37,7 +37,7 @@
                         <td>{{team.name}}</td>
                         <td>{{team.coach}}</td>
                         <td>
-                            <div class="btn-group" dropdown>
+                            <div class="btn-group" dropdown ng-show="vm.canEditLeague">
                                 <button class="btn btn-success dropdown-toggle" type="button">
                                     Action <span class="caret"></span>
                                 </button>
